Reloading image that has been modified outside Blender does not update image in Image Texture nodes #41109

Closed
opened 2014-07-17 10:18:17 +02:00 by Thor Ekle · 6 comments

System Information
Win 7/64, NVIDIA GeForce GTX 660 Ti

Blender Version
Broken: 2.71
Worked: (optional)

Short description of error
Reloading image that has been modified outside Blender does not update image in Image Texture nodes.

Exact steps for others to reproduce the error
• Select Cycles Render
• Add a material to the default cube
• Add an Image Texture node and connect the Color output to the Color input on the Diffuse BSDF node
• In the UV/Image Editor, create a new image and save it to disk
• Select this image in the Image Texture node
• Verify that it renders correctly by setting the viewport to Rendered mode
• Open the image file in an image editor and change it in some random manner (invert colors, for example)
• In the UV/Image Editor, select Image > Reload Image and verify that the modified image is displayed
• Rotate the viewport to force a redraw: the image is NOT updated
• Select the image again in the Image Texture node: the image is NOT updated

However:

• Selecting a different image in the Image Texture node and then selecting the original image correctly updates the image
• Switching the viewport from Rendered to Solid and back to Rendered also correctly updates the image

Expected behavior:
Reloading the image in the UV/Image Editor should lead to correct display in the viewport as soon as the viewport is redrawn.

**System Information** Win 7/64, NVIDIA GeForce GTX 660 Ti **Blender Version** Broken: 2.71 Worked: (optional) **Short description of error** Reloading image that has been modified outside Blender does not update image in Image Texture nodes. **Exact steps for others to reproduce the error** • Select Cycles Render • Add a material to the default cube • Add an Image Texture node and connect the Color output to the Color input on the Diffuse BSDF node • In the UV/Image Editor, create a new image and save it to disk • Select this image in the Image Texture node • Verify that it renders correctly by setting the viewport to Rendered mode • Open the image file in an image editor and change it in some random manner (invert colors, for example) • In the UV/Image Editor, select Image > Reload Image and verify that the modified image is displayed • Rotate the viewport to force a redraw: the image is NOT updated • Select the image again in the Image Texture node: the image is NOT updated However: • Selecting a different image in the Image Texture node and then selecting the original image correctly updates the image • Switching the viewport from Rendered to Solid and back to Rendered also correctly updates the image Expected behavior: Reloading the image in the UV/Image Editor should lead to correct display in the viewport as soon as the viewport is redrawn.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thorie

Added subscriber: @thorie
Sergey Sharybin self-assigned this 2014-07-17 10:41:40 +02:00

Will have a closer look later.

Will have a closer look later.

This issue was referenced by 9a45c9dadf

This issue was referenced by 9a45c9dadf435ac6c1329372dc08f21b1af242c6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9a45c9dadf.

Closed by commit 9a45c9dadf.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41109
No description provided.