Fix T41109: Reloading image that has been modified outside Blender does not update image in Image Texture nodes